public class FedFlix
{
    public void runFedFlix()
    {
        setUp();
        mainMenu();

    }

    private void setUp()
    {
        SetUp setUp = new SetUp();
        setUp.runSetUp();
    }

    private void mainMenu() // takes a user as argument
    {

    }
}
