import java.util.ArrayList;

public class Main
{
    public static final FedFlix fedFlix = new FedFlix();
    public static void main(String[] args)
    {
        fedFlix.runFedFlix();
    }
}