public class MainMenu
{
    /*
    public void setup(){
        StartMenu.setup();
    }

     */
}
